<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genre">Genre</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="title">Title</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="poster">Poster</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
</resources>