<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.detail.DetailActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/poster"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:src="@color/blue_dark"
        android:contentDescription="@string/poster"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_release_date"
        style="@style/DarkBlueText"
        android:layout_width="170dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/release_date"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/poster"/>

    <TextView
        android:id="@+id/tv_date"
        style="@style/DarkText"
        android:layout_width="170dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/release_date"
        app:layout_constraintTop_toBottomOf="@id/tv_release_date"
        app:layout_constraintStart_toEndOf="@id/poster"/>

    <TextView
        android:id="@+id/tv_genre"
        style="@style/DarkBlueText"
        android:layout_width="170dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/genre"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintStart_toEndOf="@id/poster"/>

    <TextView
        android:id="@+id/tv_genre_list"
        style="@style/DarkText"
        android:layout_width="170dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/genre"
        app:layout_constraintTop_toBottomOf="@id/tv_genre"
        app:layout_constraintStart_toEndOf="@id/poster"/>

    <TextView
        android:id="@+id/tv_budget"
        style="@style/DarkBlueText"
        android:layout_width="170dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/budget"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_genre_list"
        app:layout_constraintStart_toEndOf="@id/poster"/>

    <TextView
        android:id="@+id/tv_budget_value"
        style="@style/DarkText"
        android:layout_width="170dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/budget"
        app:layout_constraintTop_toBottomOf="@id/tv_budget"
        app:layout_constraintStart_toEndOf="@id/poster"/>

    <TextView
        android:id="@+id/tv_revenue"
        style="@style/DarkBlueText"
        android:layout_width="170dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/revenue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_budget_value"
        app:layout_constraintStart_toEndOf="@id/poster"/>

    <TextView
        android:id="@+id/tv_revenue_value"
        style="@style/DarkText"
        android:layout_width="170dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/revenue"
        app:layout_constraintTop_toBottomOf="@id/tv_revenue"
        app:layout_constraintStart_toEndOf="@id/poster"/>

    <TextView
        android:id="@+id/tv_title"
        style="@style/DarkBlueText"
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_overview"
        style="@style/DarkBlueText"
        android:layout_width="match_parent"
        android:text="@string/overview"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_overview_desc"
        style="@style/DarkText"
        android:layout_width="match_parent"
        android:text="@string/overview"
        app:layout_constraintTop_toBottomOf="@id/tv_overview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>