<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="110dp"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/poster" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/DarkBlueText"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:maxLines="3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_overview"
            style="@style/DarkBlueText"
            android:layout_width="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="20dp"
            android:text="@string/overview"
            android:textSize="16sp"
            android:maxLines="3"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>